tests/baselines/reference/getJavaScriptSyntacticDiagnostics15.baseline
// === Syntax Diagnostics ===
Syntactic Diagnostics for file '/tests/cases/fourslash/getJavaScriptSyntacticDiagnostics15.ts':
/tests/cases/fourslash/a.js(1,12): error TS8012: Parameter modifiers can only be used in TypeScript files.


==== /tests/cases/fourslash/a.js (1 errors) ====
    function F(public p) { }
               ~~~~~~
!!! error TS8012: Parameter modifiers can only be used in TypeScript files.